--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keeno-rest",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Multitenant Rest API",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,15 @@
   "bugs": {
     "url": "https://github.com/miketerry-org/keeno-rest/issues"
   },
-  "homepage": "https://github.com/miketerry-org/keeno-rest#readme"
+  "homepage": "https://github.com/miketerry-org/keeno-rest#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "keeno-env": "^0.2.0",
+    "keeno-schema": "^0.4.0",
+    "morgan": "^1.10.0"
+  }
 }
