--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keeno-rest",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "initializes express Rest API",
   "main": "index.js",
   "scripts": {
@@ -28,8 +28,9 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
-    "keeno-env": "^0.2.1",
-    "keeno-schema": "^0.4.0",
+    "keeno-env": "^0.2.2",
+    "keeno-schema": "^0.4.1",
+    "keeno-system": "^0.2.1",
     "morgan": "^1.10.0"
   }
 }
